examples/pos/low_loop_no_grow/bob.oio
BOB

channel ALICE/A2@{} : int@{H};

var bobs_secret : int@{H} = 0;

START@{} (i : int@{}) {
    send(ALICE/A2, bobs_secret);
}

B2@{} (secret : int@{H}) {
    print("BOB/B2 received", secret);
    send(ALICE/A2, secret);
}
